--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,18 +18,24 @@
 
   </head>
   <body>
-     <!-- remove div header
+     <!-- remove div header --->
       <div id="header">
         <nav>
+          <!---
           <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
           {% if site.show_downloads %}
             <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
             <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
             <li class="title">DOWNLOADS</li>
           {% endif %}
+          -->
+          
+          <a href="/"> Home </a>
+          <a href="/about.html" About </a>
+          
         </nav>
       </div>   
-     end header -->
+     <!--- end header -->
      
 
     <div class="wrapper">
