--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,8 @@
           {% endif %}
           -->
           
-          <a href="/"> Home </a>
-          <a href="/about.html" About </a>
+          <li class="fork"> <a href="/"> Home </a></li>
+          <li class="downloads"> <a href="/about.html" About </a></li>
           
         </nav>
       </div>   
