--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,8 @@
           -->
           
           <li class="fork"> <a href="/"> Home </a></li>
-          <li class="downloads"> <a href="/about.html" About </a></li>
+          <li class="fork"> <a href="/pagina_uno.html"> Pagina UNO </a></li>
+          <li class="downloads"> <a href="/about.html"> About </a></li>
           
         </nav>
       </div>   
