--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,10 @@
   <body>
      <!-- remove div header --->
       <div id="header">
+        <h1>{{ site.title | default: site.github.repository_name }}</h1>
+        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <hr>
+        
         <nav>
           <!---
           <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
